--- a/assets/config/config.json
+++ b/assets/config/config.json
@@ -1,3 +1,4 @@
 {
-  "baseUrl": "http://k8s-bstproxy-414e7603aa-467939501.ap-southeast-1.elb.amazonaws.com/bst-admin-service"
+  "baseUrl": "http://k8s-bstproxy-414e7603aa-467939501.ap-southeast-1.elb.amazonaws.com/bst-admin-service",
+  "baseAuthUrl": "http://k8s-bstproxy-414e7603aa-467939501.ap-southeast-1.elb.amazonaws.com/bst-auth-service"
 }
