--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   pinput: ^4.0.0
   fl_chart: ^0.68.0
   font_awesome_flutter: ^10.0.0
+  get_it: ^7.0.0
 
 dev_dependencies:
   build_runner: ^2.3.3
