--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fl_chart: ^0.68.0
   font_awesome_flutter: ^10.0.0
   get_it: ^7.0.0
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   build_runner: ^2.3.3
