--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,8 @@
 include: package:lint/analysis_options.yaml
 
 analyzer:
+  errors:
+    unused_local_variable: ignore
   exclude: [lib/data/network/entity/*.g.dart, lib/util/l10n/**]
 
 linter:
