--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,14 +2,14 @@ name: bst_staff_mobile
 description: learn application from plus education crop.
 publish_to: "none"
 
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: ">=3.0.1 <4.0.0"
 
 dependencies:
   cached_network_image: ^3.2.3
-  device_info_plus: ^9.1.1
+  device_info_plus: ^10.1.2
   dio: ^5.1.1
   flutter:
     sdk: flutter
@@ -17,7 +17,7 @@ dependencies:
     sdk: flutter
   freezed_annotation: ^2.2.0
   google_fonts: ^6.1.0
-  infinite_scroll_pagination: ^3.2.0
+  infinite_scroll_pagination: ^4.0.0
   intl: ^0.19.0
   json_annotation: ^4.8.0
   logger: ^2.0.1
@@ -25,19 +25,20 @@ dependencies:
   path_provider: ^2.0.14
   permission_handler: ^11.0.1
   provider: ^6.0.5
-  shared_preferences: ^2.1.0
+  shared_preferences: ^2.3.2
   sqflite: ^2.2.6
+  sqflite_common_ffi: ^2.2.6
   uuid: ^4.2.1
   timeline_tile: ^2.0.0
   video_player: ^2.8.2
   chewie: ^1.7.4
   badges: ^3.1.2
-  otp_text_field: ^1.1.3
-  image_picker: ^1.0.7
-  image_cropper: ^5.0.1
+  # otp_text_field: ^1.1.3
+  # image_picker: ^1.0.7
+  # image_cropper: ^8.0.2
   animated_splash_screen: ^1.3.0
-  pinput: ^4.0.0
-  fl_chart: ^0.68.0
+  pinput: ^5.0.0
+  fl_chart: ^0.69.0
   font_awesome_flutter: ^10.0.0
   get_it: ^7.0.0
   table_calendar: ^3.1.2
@@ -49,7 +50,7 @@ dev_dependencies:
   freezed: ^2.3.2
   json_serializable: ^6.6.1
   lint: ^2.0.1
-  mocktail: ^0.3.0
+  mocktail: ^1.0.4
 
 flutter:
   uses-material-design: true
