--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,7 +53,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.pluseducation.bst.staff.mobile"
+        applicationId "com.osnarc.antidrug"
         minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
