--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,17 +36,18 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 // }
 
 android {
+    namespace 'com.osnarc.antidrug'
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+//    kotlinOptions {
+//        jvmTarget = '1.8'
+//    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -88,4 +89,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:multidex:1.0.3"
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 }
