--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -31,7 +31,7 @@
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Microphone usage</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Photo Library usage</string>
+	<string>Please allow access to your photos to upload a profile picture from your library</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
