--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: bst_staff_mobile
 description: learn application from plus education crop.
 publish_to: "none"
 
-version: 1.0.0+4
+version: 1.0.0+6
 
 environment:
   sdk: ">=3.0.1 <4.0.0"
@@ -28,12 +28,12 @@ dependencies:
   shared_preferences: ^2.3.2
   sqflite: ^2.2.6
   sqflite_common_ffi: ^2.2.6
-  animated_splash_screen: ^1.3.0
   pinput: ^5.0.0
   fl_chart: ^0.69.0
   font_awesome_flutter: ^10.0.0
   get_it: ^7.0.0
   table_calendar: ^3.1.2
+  image_picker: ^1.0.7
 
 dev_dependencies:
   build_runner: ^2.3.3
