--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,13 +28,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.jetbrains.kotlin.android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
-// def keystorePropertiesFile = rootProject.file("key.properties")
-// def keystoreProperties = new Properties()
-// if (keystorePropertiesFile.exists()) {
-//     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-// } else {
-//     println 'keystore.properties file not found'
-// }
+def keystorePropertiesFile = rootProject.file("key.properties")
+def keystoreProperties = new Properties()
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+} else {
+    println 'keystore.properties file not found'
+}
 
 android {
     compileSdkVersion flutter.compileSdkVersion
@@ -55,7 +55,7 @@ android {
 
     defaultConfig {
         applicationId "com.osnarc.antidrug"
-        minSdkVersion 21
+        minSdkVersion 28
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -64,10 +64,10 @@ android {
 
     signingConfigs {
         release {
-            // keyAlias keystoreProperties['keyAlias']
-            // keyPassword keystoreProperties['keyPassword']
-            // storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-            // storePassword keystoreProperties['storePassword']
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']
         }
     }
 
@@ -89,4 +89,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:multidex:1.0.3"
+    implementation 'androidx.appcompat:appcompat:1.3.1'
 }
