--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: bst_staff_mobile
 description: learn application from plus education crop.
 publish_to: "none"
 
-version: 1.0.0+8
+version: 1.0.0+12
 
 environment:
   sdk: ">=3.0.1 <4.0.0"
@@ -11,6 +11,7 @@ dependencies:
   cached_network_image: ^3.2.3
   device_info_plus: ^10.1.2
   dio: ^5.1.1
+  timezone: ^0.7.0
   flutter:
     sdk: flutter
   flutter_localizations:
