--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   table_calendar: ^3.1.2
   image_picker: ^1.0.7
   carousel_slider: ^5.0.0
+  camera: ^0.11.1
 
 dev_dependencies:
   build_runner: ^2.3.3
