--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   image_picker: ^1.0.7
   carousel_slider: ^5.0.0
   camera: ^0.11.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   build_runner: ^2.3.3
