--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,6 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
-// apply plugin: 'kotlin-android'
 apply plugin: 'org.jetbrains.kotlin.android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
@@ -37,8 +36,8 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion flutter.compileSdkVersion
     namespace 'com.osnarc.antidrug'
+    compileSdkVersion 34 //flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -57,7 +56,7 @@ android {
     defaultConfig {
         applicationId "com.osnarc.antidrug"
         minSdkVersion 28
-        targetSdkVersion flutter.targetSdkVersion
+        targetSdkVersion 34//flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
@@ -91,4 +90,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:multidex:1.0.3"
     implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation(platform("com.google.firebase:firebase-bom:33.6.0"))
+    implementation("com.google.firebase:firebase-analytics")
 }
