--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   carousel_slider: ^5.0.0
   camera: ^0.11.1
   url_launcher: ^6.3.0
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
 
 dev_dependencies:
   build_runner: ^2.3.3
