Update - upgrade gradlew to 8.7.3 and kotlin 2.1.10

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ unlinked_spec.ds
 **/android/**/GeneratedPluginRegistrant.java
 **/android/projectFilesBackup/
 **/android/key.properties
+**/android/app/.cxx
 **/android/nativetemplates/build/
 /android/app/debug
 /android/app/profile
