--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   freezed_annotation: ^2.2.0
+  package_info_plus: ^8.1.1
   google_fonts: ^6.1.0
   infinite_scroll_pagination: ^4.0.0
   intl: ^0.19.0
