--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.3.0
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
+  crypto: ^3.0.6
 
 dev_dependencies:
   build_runner: ^2.3.3
